--- a/multiconverter.css
+++ b/multiconverter.css
@@ -1,3 +1,11 @@
+
+
+main {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
 .body {
   font-family: "Roboto", sans-serif;
 }
@@ -9,7 +17,7 @@
   flex-direction: column;
   gap: 20px;
   align-items: center;
-  width: 320px;
+  width: 310px;
   height: 450px;
   background-color: #f3cdfd;
   box-shadow: 10px 20px 20px 0 rgba(0, 0, 0, 0.2);
@@ -17,6 +25,7 @@
   margin: auto;
   margin-top: 100px;
   border-top: #cc5de8 solid 3px;
+  border-left: #cc5de8 solid 1px;
   border-right: #cc5de8 solid 10px;
   border-bottom: #cc5de8 solid 10px;
 }
@@ -26,7 +35,7 @@
   border-top-left-radius: 20px;
   border-bottom-right-radius: 20px;
   padding-left: 15px;
-  margin-left: 10px;
+  margin-left: 5px;
   width: 240px;
 }
 
@@ -157,7 +166,7 @@
   border-radius: 6px;
 }
 
-.convert {
+.convert1 {
   color: #d1bfc9;
   margin-top: -40px;
   width: 200px;
@@ -167,7 +176,7 @@
   border: outset 2px;
 }
 
-.buttons {
+.buttons1 {
   color: #d1bfc9;
   background-color: #3f20a6;
   font-size: 22px;
@@ -177,64 +186,47 @@
   padding: 5px 0;
 }
 
-.buttons:hover {
+.buttons1:hover {
   background-color: #3412bd;
   font-size: 25px;
   cursor: pointer;
   box-shadow: 2px 10px 10px 0 rgba(0, 0, 0, 0.2);
 }
 
-.buttons:active {
+.buttons1:active {
   box-shadow: 2px 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-.convert:hover {
+.convert1:hover {
   width: 210px;
 }
 
-.convert:active {
+.convert1:active {
   width: 180px;
   font-size: 22px;
 }
 
-.reset {
+.reset1 {
   width: 150px;
 }
 
-.reset:hover {
+.reset1:hover {
   width: 160px;
 }
 
-.reset:active {
+.reset1:active {
   width: 130px;
   font-size: 22px;
 }
 
+     
 
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+/* For Mass */
 
 .panel2 {
   font-family: "Roboto", sans-serif;
@@ -245,155 +237,103 @@
   align-items: center;
   width: 320px;
   height: 450px;
-  background-color: #f3cdfd;
+  background-color: rgba(233, 250, 243, 0.5);
   box-shadow: 10px 20px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin: auto;
   margin-top: 100px;
-  border-top: #cc5de8 solid 3px;
-  border-right: #cc5de8 solid 10px;
-  border-bottom: #cc5de8 solid 10px;
-}
+  border-top: #129068 solid 3px;
+  border-left: #129068 solid 1px;
+  border-right: #129068 solid 10px;
+  border-bottom: #129068 solid 10px;
 
-.fieldset {
-  border: #e599f7 outset 5px;
+}
+/* .grid:not(:last-child) */
+
+.from{
+  color: rgb(12, 120, 81);
+  font-size: 18px;
+  font-weight: bold;
+}
+.from_container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin-top: 20px;
+  background-color: #def2e4;
+  gap: 5px;
+  border: #d5f0e8 groove 5px;
   border-top-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
   padding-left: 15px;
-  margin-left: 10px;
   width: 240px;
 }
 
-.legend {
-  color: rgba(62, 2, 2, 0.5);
-  font-size: 17px;
+.from_label {
+  background-color: #dfeee9;
+  color:  #16a57a;
+  font-weight: 800;
+  font-size: 34px;
+  border: #e6faf4 inset 2px;
+  text-align: center;
+  margin-left: 15px;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
 }
 
-.radio {
-  cursor: pointer;
-  height: 16px;
-  width: 16px;
-  appearance: none;
-  background-color: #f8f9fa;
-  border: #5f3dc4 solid 2px;
-  border-radius: 50%;
+.select_option{
+  position: relative;
+  color: #def2e4;
+  font-size: 20px;
+  font-weight:bold;
+  background-color: #1f916f;
+  width: 150px;
+  height: 25px;
+  margin-left: 15px;
+  border: none;
+  border-radius: 10px;
 }
 
-.radio:hover {
-  height: 18px;
-  width: 18px;
-  background-color: #f4eaf2;
+
+.to{
+  color: rgb(12, 120, 81);
+  font-size: 18px;
+  font-weight: bold;
+}
+.to_container {
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+  margin-top: -5px;
+  background-color: #def2e4;
+  gap: 5px;
+  border: #d5f0e8 groove 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  padding-left: 15px;
+  width: 240px;
 }
 
-.radio:active {
-  width: 22px;
-  height: 22px;
-  border: #862e9c inset 3px;
+.to_label {
+  background-color: #dfeee9;
+  color:  #16a57a;
+  font-weight: 800;
+  font-size: 34px;
+  border: #e6faf4 inset 2px;
+  text-align: center;
+  margin-left: 15px;
+  width: 200px;
+  height: 40px;
+  border-radius: 10px;
 }
 
-.radio:checked {
-  border: #5f3dc4 groove 5px;
-}
-
-.radio1 {
-  display: inline-block;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #3f20a6;
-}
-
-.radio2 {
-  display: inline-block;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #3f20a6;
-}
-
-.form1 {
-  padding-top: 10px;
-  padding-bottom: 5px;
-  width: 250px;
-  margin-top: 40px;
-  margin-right: 40px;
-}
-
-.form2 {
-  padding-bottom: 45px;
+.weight {
   width: 290px;
 }
 
-.radio1 {
-  font: 10px;
-  padding-top: 5px;
-  padding-bottom: 15px;
-}
-
-.radio2 {
-  font: 20px;
-  padding-bottom: 3px;
-}
-
-.flip1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.flip2 {
-  transform: translate(0%, 1%);
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-}
-
-.celsius {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #502ac0;
-  font-size: 17px;
-  font-weight: 1000;
-  margin-left: -2px;
-}
-
-.fahrenheit {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  color: #502ac0;
-  font-size: 17px;
-  margin-left: 10px;
-}
-
-.fahr {
-  margin-left: 20px;
-}
-
-.fahr1 {
-  margin-left: 15px;
-}
-
-.fahr2 {
-  margin-left: 20px;
-}
-
-.celsius_label {
-  background-color: transparent;
-  color: #5f3dc4;
-  font-weight: 400;
-  border: inset 2px;
-  text-align: center;
-  font-size: 24px;
-  width: 95px;
-  border-radius: 6px;
-}
-
-.fahrenheit_label {
-  background-color: transparent;
-  color: #5f3dc4;
-  font-weight: 400;
-  border: inset 2px;
-  text-align: center;
-  font-size: 24px;
-  width: 95px;
-  border-radius: 6px;
-}
-
-.convert {
-  color: #d1bfc9;
-  margin-top: -40px;
+.convert2 {
+  margin-top: -15px;
   width: 200px;
   font-size: 22px;
   font-weight: bold;
@@ -401,9 +341,9 @@
   border: outset 2px;
 }
 
-.buttons {
-  color: #d1bfc9;
-  background-color: #3f20a6;
+.buttons2 {
+  color: #def2e4;
+  background-color: #0e644a;
   font-size: 22px;
   font-weight: bold;
   border-radius: 25px;
@@ -411,35 +351,37 @@
   padding: 5px 0;
 }
 
-.buttons:hover {
-  background-color: #3412bd;
+.buttons2:hover {
+  background-color: #10906a;
   font-size: 25px;
   cursor: pointer;
   box-shadow: 2px 10px 10px 0 rgba(0, 0, 0, 0.2);
+  animation: all .5s ease-in;
 }
 
-.buttons:active {
+.buttons2:active {
   box-shadow: 2px 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
 
-.convert:hover {
+.convert2:hover {
   width: 210px;
 }
 
-.convert:active {
+.convert2:active {
   width: 180px;
   font-size: 22px;
 }
 
-.reset {
+.reset2 {
   width: 150px;
+  margin-top: -15px;
 }
 
-.reset:hover {
+.reset2:hover {
   width: 160px;
 }
 
-.reset:active {
+.reset2:active {
   width: 130px;
   font-size: 22px;
-}
+} 
