--- a/multiconverter.css
+++ b/multiconverter.css
@@ -219,6 +219,52 @@ main {
   font-size: 22px;
 }
 
+
+.temperature-alert-display {
+  display: block;
+  position: relative;
+  font: 10px;
+  color:  #def2e4;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #0b392b;
+  gap: 20px;
+  padding: 20px;
+  height: 100px;
+  width: 200px;
+  z-index: 5;
+  transform: translate(0%, -255%);
+  border-radius: 10px;
+  box-shadow: 10px 20px 500px 10px rgba(0, 0, 0, 0.2);
+   opacity: 0.8;
+}
+
+
+.temperature-alert-button {
+  color: #def2e4;
+  background-color: #0c6349;;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 25px;
+  border: outset 3px;
+  padding: 2px 0;
+  width: 100px;
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-left: 40px;
+  border-radius: 10px;
+  opacity: 1;
+}
+
+.alert-button:hover {
+  color: #def2e4;
+}
+
+.alert-button:active {
+   background-color: #022b1f;
+} 
+
      
 
 
@@ -248,7 +294,7 @@ main {
   border-bottom: #129068 solid 10px;
 
 }
-/* .grid:not(:last-child) */
+
 
 .from{
   color: rgb(12, 120, 81);
@@ -258,7 +304,6 @@ main {
 .from_container {
   display: flex;
   flex-direction: column;
-  padding: 15px;
   margin-top: 20px;
   background-color: #def2e4;
   gap: 5px;
@@ -266,26 +311,26 @@ main {
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   padding-left: 15px;
-  width: 240px;
+  width: 260px;
 }
 
-.from_label {
+.input-labels {
   background-color: #dfeee9;
   color:  #16a57a;
   font-weight: 800;
-  font-size: 34px;
+  font-size: 24px;
   border: #e6faf4 inset 2px;
   text-align: center;
-  margin-left: 15px;
   width: 200px;
   height: 40px;
   border-radius: 10px;
 }
 
+
 .select_option{
   position: relative;
   color: #def2e4;
-  font-size: 20px;
+  font-size: 18px;
   font-weight:bold;
   background-color: #1f916f;
   width: 150px;
@@ -304,7 +349,6 @@ main {
 .to_container {
   display: flex;
   flex-direction: column;
-  padding: 15px;
   margin-top: -5px;
   background-color: #def2e4;
   gap: 5px;
@@ -312,20 +356,16 @@ main {
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
   padding-left: 15px;
-  width: 240px;
+  width: 260px;
 }
 
-.to_label {
-  background-color: #dfeee9;
+.units {
   color:  #16a57a;
   font-weight: 800;
-  font-size: 34px;
-  border: #e6faf4 inset 2px;
-  text-align: center;
-  margin-left: 15px;
-  width: 200px;
-  height: 40px;
-  border-radius: 10px;
+  font-size: 22px;
+  margin: 0;
+  padding: 0;
+  transform: translate(83%, -135%);
 }
 
 .weight {
@@ -384,4 +424,48 @@ main {
 .reset2:active {
   width: 130px;
   font-size: 22px;
+} 
+
+.alert-display {
+  display: block;
+  position: relative;
+  font: 10px;
+  color:  #def2e4;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: #0b392b;
+  gap: 20px;
+  padding: 20px;
+  height: 100px;
+  width: 200px;
+  z-index: 5;
+  transform: translate(0%, -255%);
+  border-radius: 10px;
+  box-shadow: 10px 20px 500px 10px rgba(0, 0, 0, 0.2);
+   opacity: 0.8;
+}
+
+.alert-button {
+  color: #def2e4;
+  background-color: #0c6349;;
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 25px;
+  border: outset 3px;
+  padding: 2px 0;
+  width: 100px;
+  margin-top: 20px;
+  margin-right: 40px;
+  margin-left: 40px;
+  border-radius: 10px;
+  opacity: 1;
+}
+
+.alert-button:hover {
+  color: #def2e4;
+}
+
+.alert-button:active {
+   background-color: #022b1f;
 } 
