--- a/multiconverter.css
+++ b/multiconverter.css
@@ -476,7 +476,7 @@ main {
   font-weight: 600;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   align-items: center;
   width: 320px;
   height: 450px;
@@ -492,159 +492,81 @@ main {
 
 }
 
-.container-from {
+.container-time {
   display: flex;
-  flex-direction: row-reverse;
-  margin-top: 50px;
+  flex-direction: column;
+  margin-top: 13px;
+  margin-left: 5px;
   background-color: #def2e4;
   gap: 5px;
   border: #d5f0e8 groove 5px;
   border-radius: 10px;
-  padding: 25px 15px;
+  padding: 5px 15px;
   width: 260px;
+  height: 410px;
 }
 
-.time-from-input {
-  font-size: 24px;
+.time-input {
+  font-size: 18px;
   background-color: #dfeee9;
   color:  #16a57a;
-  font-weight: 800;
+  font-weight: 600;
   border: #e6faf4 inset 2px;
   text-align: center;
   width: 130px;
-  margin-right: -10px;
-  height: 40px;
+  margin-left: -10px;
+  height: 20px;
   border-radius: 10px;
 }
-
-.to-output {font-size: 24px;}
-
-
-.select_option{
-  position: relative;
+.time-units{
   color: #def2e4;
-  font-size: 16px;
+  font-size: 14px;
   font-weight:bold;
   background-color: #1f916f;
   width: 120px;
-  height: 35px;
-  margin-left: 15px;
-  margin-top: 5px;
+  height: 15px;
+  padding: 3px;
+  padding-left: 5px;
+  margin-left: -3px;
+  margin-top: 2px;
   border: none;
   border-radius: 10px;
 }
 
-.container-to {
+.time-label{
   display: flex;
   flex-direction: row-reverse;
-  background-color: #def2e4;
   gap: 5px;
-  border: #d5f0e8 groove 5px;
-  border-radius: 10px;
-  padding: 25px 15px;
-  width: 260px;
+  margin-left: 5px;
 }
 
-.time-to-input {
-  font-size: 24px;
-  background-color: #dfeee9;
-  color:  #16a57a;
-  font-weight: 800;
-  border: #e6faf4 inset 2px;
-  text-align: center;
-  width: 130px;
-  margin-right: -10px;
-  height: 40px;
-  border-radius: 10px;
-}
-
-
-.to-time{
-  color: rgb(12, 120, 81);
-  font-size: 18px;
-  font-weight: bold;
-}
-
-.weight {
-  width: 290px;
-}
-
-.buttons2 {
+.clear-time-btn {
   color: #def2e4;
   background-color: #0e644a;
-  font-size: 22px;
+  font-size: 16px;
   font-weight: bold;
   border-radius: 25px;
   border: outset 3px;
   padding: 5px 0;
+  width: 200px;
+  margin-top: 3px;
+  margin-left: 25px;
 }
 
-.buttons2:hover {
-  background-color: #10906a;
-  font-size: 25px;
+.clear-time-btn:hover {
+  width: 203px;
+   background-color: #10906a;
+  font-size: 17px;
   cursor: pointer;
   box-shadow: 2px 10px 10px 0 rgba(0, 0, 0, 0.2);
   animation: all .5s ease-in;
 }
 
+.clear-time-btn:active {
+  width: 195px;
+  font-size: 16px;
+} 
+
 .buttons2:active {
   box-shadow: 2px 5px 5px 0 rgba(0, 0, 0, 0.2);
 }
-
-.reset2 {
-  width: 200px;
-  margin-top: 10px;
-}
-
-.reset2:hover {
-  width: 220px;
-}
-
-.reset2:active {
-  width: 200px;
-  font-size: 22px;
-} 
-
-.alert-display {
-  display: block;
-  position: relative;
-  font: 10px;
-  color:  #def2e4;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  background-color: #0b392b;
-  gap: 20px;
-  padding: 20px;
-  height: 100px;
-  width: 200px;
-  z-index: 5;
-  transform: translate(0%, -255%);
-  border-radius: 10px;
-  box-shadow: 10px 20px 500px 10px rgba(0, 0, 0, 0.2);
-   opacity: 0.8;
-}
-
-.alert-button {
-  color: #def2e4;
-  background-color: #0c6349;;
-  font-size: 24px;
-  font-weight: bold;
-  border-radius: 25px;
-  border: outset 3px;
-  padding: 2px 0;
-  width: 100px;
-  margin-top: 20px;
-  margin-right: 40px;
-  margin-left: 40px;
-  border-radius: 10px;
-  opacity: 1;
-}
-
-.alert-button:hover {
-  color: #def2e4;
-}
-
-.alert-button:active {
-   background-color: #022b1f;
-} 
