--- a/multiconverter.css
+++ b/multiconverter.css
@@ -8,19 +8,19 @@
 }
 
 .heading{
-   color: #f7fbf9;
-  background-color: #190540;
+  color: #083325;
+  background-color: #e9faf3e6;
+  letter-spacing: 1px;
   margin-top: -30px;
-  padding-left: 70px;
+  padding-left: 90px;
   border-radius: 20px;
 }
-
 
 main{
   position: relative;
   display: grid;
   place-content: center;
-  background-color: rgba(211, 131, 254, 0.95);
+  background-color:#0f4932f2;;
   margin: auto;
   width: 500px;
   height: 95vh; 
@@ -34,10 +34,10 @@ main{
 }
 
 .selection-btns {
-  font-size: 20px;
+  color: #d2cfcf;
+  font-size: 22px;
   font-weight: bolder;
-  letter-spacing: 1px;
-  border-radius: 13px;
+  border-radius: 20px ;
   border: outset 3px;
   padding: 5px 0;
   width: 100px;
@@ -45,7 +45,7 @@ main{
   cursor: pointer;
 }
   .selection-btns:hover {
-  font-size: 22px;
+  font-size: 24px;
   cursor: pointer;
   box-shadow: 2px 5px 5px 0 #d7dcde;
   animation: all .5s ease-out;
@@ -58,28 +58,23 @@ main{
   animation: all .5s ease-out;
 }
 
-.selection-btns:visited {
-  font-size: 24px;
-  cursor: pointer;
-  box-shadow: 2px 5px 5px 0 #d7dcde;
-  animation: all .5s ease-out;
-}
-
 .btn-mass-display {
-  color: #def2e4;
-  background-color: #0e644a;
+  color:#d2cfcf;
+  background-color: #073c27f2;
+  border-radius: 15px;
+  border-color: cyan;
+  font-size: 26px;
 }
 
 
 .btn-temperature-display{
-  width: 150px;
-  color: #ffdef0;
-  background-color: #3f20a6;
+  width: 170px;
+  background-color: #2c1687;
 }
 
 .btn-time-display{
-   color: #ece6f2;
-   background-color: #260362;
+  letter-spacing: 1px;
+  background-color: #260362;
 }
 
 .temperature-panel {
@@ -91,7 +86,7 @@ main{
   align-items: center;
   width: 320px;
   height: 450px;
-  background-color: #f3cdfd;
+  background-color: #fed8fb;
   box-shadow: 10px 20px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin-top: 35px;
@@ -110,7 +105,7 @@ main{
 
 @keyframes temperatureAnimation {
   from {
-    transform: translateY(-100px);
+    transform: translateY(100px);
   }
 
   to {
@@ -375,7 +370,7 @@ main{
   align-items: center;
   width: 320px;
   height: 450px;
-  background-color: rgba(233, 250, 243, 0.9);
+  background-color: #e9faf3e6;
   box-shadow: 10px 20px 20px 0 rgba(5, 50, 44, 0.2);
   border-radius: 20px;
   margin-top: 35px;
@@ -435,7 +430,7 @@ main{
 }
 
 .from-input {font-size: 32px;}
-.to-output {font-size: 24px;}
+.to-output {font-size: 28px;}
 
 
 .select_option{
@@ -604,7 +599,7 @@ main{
   align-items: center;
   width: 320px;
   height: 450px;
-  background-color: #fefdff;
+  background-color: #ebe4f2;
   box-shadow: 10px 20px 20px 0 rgba(0, 0, 0, 0.2);
   border-radius: 20px;
   margin-top: 35px;
@@ -637,15 +632,14 @@ main{
   position:relative;
   display: flex;
   flex-direction: column;
-  margin-top: 7px;
-  margin-left: 4px;
+  margin: 10px 5px;
   background-color: #210454;
   gap: 5px;
-  border: #f3effa groove 10px;
+  border: #f3effa groove 5px;
   border-radius: 10px;
   padding: 5px 15px;
   width: 260px;
-  height: 410px;
+  height: 420px;
 }
 
 .time-input {
